Fixed back button not showing up.

--- a/app/css/common.scss
+++ b/app/css/common.scss
@@ -40,6 +40,7 @@ a {
 }
 .back-button {
   display: block;
+  background: url('../images/back-arrow.png');
   background-size: contain;
   width: 16px;
   height: 30px;
